## Process this file with automake to produce Makefile.in
## $Id: Makefile.am,v 1.22 2003/12/31 12:53:39 pasky Exp $

include $(top_srcdir)/Makefile.base

noinst_LIBRARIES = libdialogs.a
libdialogs_a_SOURCES = \
 document.c \
 document.h \
 download.c \
 download.h \
 edit.c \
 edit.h \
 info.c \
 info.h \
 menu.c \
 menu.h \
 options.c \
 options.h \
 status.c \
 status.h
