## Process this file with automake to produce Makefile.in
## $Id: Makefile.am,v 1.23 2004/01/24 18:24:13 pasky Exp $

include $(top_srcdir)/Makefile.base

noinst_LIBRARIES = libdialogs.a
libdialogs_a_SOURCES = \
 document.c \
 document.h \
 download.c \
 download.h \
 edit.c \
 edit.h \
 exmode.c \
 exmode.h \
 info.c \
 info.h \
 menu.c \
 menu.h \
 options.c \
 options.h \
 status.c \
 status.h
