## Process this file with automake to produce Makefile.in
## $Id: Makefile.am,v 1.2 2003/11/24 16:23:39 jonas Exp $

include $(top_srcdir)/Makefile.base

noinst_LIBRARIES = libformhist.a

libformhist_a_LIBADD = \
 formhist.o

libformhist_a_SOURCES = \
 dialogs.c \
 dialogs.h \
 formhist.c \
 formhist.h
