## Process this file with automake to produce Makefile.in
## $Id: Makefile.am,v 1.10 2003/01/03 02:17:04 pasky Exp $

include $(top_srcdir)/Makefile.base

SUBDIRS = gettext

noinst_LIBRARIES = libintl.a
libintl_a_SOURCES = \
 charsets.c \
 charsets.h \
 codepage.h \
 codepage.inc \
 entity.inc \
 uni_7b.inc
