## Process this file with automake to produce Makefile.in
## $Id: Makefile.am,v 1.18 2005/06/12 00:34:02 jonas Exp $

include $(top_srcdir)/Makefile.base

noinst_LIBRARIES = liblowlevel.a
liblowlevel_a_SOURCES = \
 connect.c \
 connect.h \
 dns.c \
 dns.h \
 home.c \
 home.h \
 interlink.c \
 interlink.h \
 select.c \
 select.h \
 signals.h \
 signals.c \
 timer.c \
 timer.h \
 timers.c \
 timers.h

