## Process this file with automake to produce Makefile.in
## $Id: Makefile.am,v 1.20 2005/06/12 01:13:58 jonas Exp $

include $(top_srcdir)/Makefile.base

noinst_LIBRARIES = liblowlevel.a
liblowlevel_a_SOURCES = \
 connect.c \
 connect.h \
 dns.c \
 dns.h \
 interlink.c \
 interlink.h \
 select.c \
 select.h \
 timer.c \
 timer.h \
 timers.c \
 timers.h

