## Process this file with automake to produce Makefile.in
## $Id: Makefile.am,v 1.21 2005/06/12 01:27:56 jonas Exp $

include $(top_srcdir)/Makefile.base

noinst_LIBRARIES = liblowlevel.a
liblowlevel_a_SOURCES = \
 connect.c \
 connect.h \
 interlink.c \
 interlink.h \
 select.c \
 select.h \
 timer.c \
 timer.h \
 timers.c \
 timers.h

