## Process this file with automake to produce Makefile.in
## $Id: Makefile.am,v 1.25 2005/06/13 00:43:28 jonas Exp $

include $(top_srcdir)/Makefile.base

noinst_LIBRARIES = libmain.a
libmain_a_SOURCES = \
 event.c \
 event.h \
 main.c \
 main.h \
 module.c \
 module.h \
 select.c \
 select.h \
 timer.c \
 timer.h \
 version.c \
 version.h

