## Process this file with automake to produce Makefile.in
## $Id: Makefile.am,v 1.5 2005/06/12 02:02:44 jonas Exp $

include $(top_srcdir)/Makefile.base

noinst_LIBRARIES = libnetwork.a
libnetwork_a_SOURCES = \
 connection.c \
 connection.h \
 dns.c \
 dns.h \
 socket.c \
 socket.h \
 state.c \
 state.h

