## Process this file with automake to produce Makefile.in
## $Id: Makefile.am,v 1.15 2005/06/12 02:02:44 jonas Exp $

include $(top_srcdir)/Makefile.base

noinst_LIBRARIES = libsched.a
libsched_a_SOURCES = \
 action.c \
 action.h \
 download.c \
 download.h \
 history.c \
 history.h \
 location.c \
 location.h \
 progress.c \
 progress.h \
 session.c \
 session.h \
 task.c \
 task.h

