## Process this file with automake to produce Makefile.in
## $Id: Makefile.am,v 1.8 2003/12/06 02:56:02 jonas Exp $

include $(top_srcdir)/Makefile.base

noinst_LIBRARIES = libsched.a
libsched_a_SOURCES = \
 connection.c \
 connection.h \
 download.c \
 download.h \
 error.c \
 error.h \
 event.c \
 event.h \
 history.c \
 history.h \
 location.c \
 location.h \
 session.c \
 session.h \
 task.c \
 task.h

