## Process this file with automake to produce Makefile.in
## $Id: Makefile.am,v 1.11 2005/04/17 23:10:15 jonas Exp $

include $(top_srcdir)/Makefile.base

noinst_LIBRARIES = libsched.a
libsched_a_SOURCES = \
 action.c \
 action.h \
 connection.c \
 connection.h \
 download.c \
 download.h \
 error.c \
 error.h \
 event.c \
 event.h \
 history.c \
 history.h \
 location.c \
 location.h \
 progress.c \
 progress.h \
 session.c \
 session.h \
 state.h \
 task.c \
 task.h

