## Process this file with automake to produce Makefile.in
## $Id: Makefile.am,v 1.17 2005/06/13 21:21:10 jonas Exp $

include $(top_srcdir)/Makefile.base

noinst_LIBRARIES = libsched.a
libsched_a_SOURCES = \
 download.c \
 download.h \
 history.c \
 history.h \
 location.c \
 location.h \
 session.c \
 session.h \
 task.c \
 task.h

