## Process this file with automake to produce Makefile.in
## $Id: Makefile.am,v 1.14 2005/09/14 10:04:54 zas Exp $

include $(top_srcdir)/Makefile.base

EXTRA_DIST = TODO

noinst_LIBRARIES = libterminal.a
libterminal_a_SOURCES = \
 color.c \
 color.h \
 draw.c \
 draw.h \
 event.c \
 event.h \
 hardio.c \
 hardio.h \
 itrm.h \
 kbd.c \
 kbd.h \
 key.inc \
 mouse.h \
 palette.inc \
 screen.c \
 screen.h \
 tab.c \
 tab.h \
 terminal.c \
 terminal.h \
 window.c \
 window.h
