## Process this file with automake to produce Makefile.in
## $Id: Makefile.am,v 1.6 2003/06/10 17:26:44 jonas Exp $

include $(top_srcdir)/doc/book/Makefile.doc

EXTRA_PROGRAMS = manpages
manpages_SOURCES = elinks.1.xml elinkskeys.5.xml
manpages_MANFORMAT = elinks.1 elinkskeys.5
manpages_HTMLFORMAT = elinks.1.html elinkskeys.5.html

EXTRA_DIST = $(manpages_SOURCES)
